# jobhunter-agent

./: .gitignore  README.md  claude.md
backend/: benchmark_cv_generation.py  check_matching.py  cv_model.py  database.py  deepeval_judge.py  dependencies.py  france_travail.py  graph.py  main.py  prompts.py  pyproject.toml  sections.py  test_cv_graph_full.py  test_generate_cv.py
backend/graphs/: chat_graph.py  cover_graph.py  cv_graph.py  state.py
backend/nodes/: analyze_cv_matches_node.py  analyze_gh_matches_node.py  ask_continue_node.py  ask_in_item_node.py  ask_in_section_node.py  assemble_cover_letter_node.py  assemble_cv_node.py  extract_item_node.py  extract_section_node.py  generate_cv_node.py  handle_continue_answer_node.py  save_to_db_node.py
backend/routers/: cover.py  cv.py  github.py  job_offers.py
backend/tests/: conftest.py  test_database.py  test_job_offers.py  test_rag.py  test_rag_quality.py
backend/utils/: database.py  france_travail.py  github.py  query_builder.py  rag.py
documentation/: learnings.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  api.js  llmConfig.js
frontend/src/components/: CVImport.jsx  CVPanel.jsx  CVPreview.jsx  Chat.jsx  ChatBar.jsx  JobMap.jsx  JobSearch.jsx  Welcome.jsx
