[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Laetitia Ikusawa",email = "laetdi@gmail.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi (>=0.137.1,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "litellm (>=1.89.1,<2.0.0)",
    "langgraph (>=1.2.5,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
